<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_message">AFortune</string>
    <string name="app_name">AFortune</string>
    <string name="timeout_prompt">Set the fortune period</string>
    <string name="about_prompt">About ...</string>
    <string name="update_prompt">Change fortune</string>
    <string name="close_prompt">Close</string>
    <string name="appwidget4_1_label">AFortune App Widget</string>
    <string name="appwidget4_2_label">AFortune App Widget 4x2</string>
    <string name="appwidget4_3_label">AFortune App Widget 4x3</string>
    <string name="appwidget4_4_label">AFortune App Widget 4x4</string>
    <string-array name="timeout_array">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="color_array">
		<item>Black</item>
		<item>Blue</item>
		<item>Cyan</item>
		<item>Dark gray</item>
		<item>Gray</item>
		<item>Green</item>
		<item>Light gray</item>
		<item>Magenta</item>
		<item>Red</item>
		<item>White</item>
		<item>Yellow</item>
    </string-array>
    <string-array name="transparent_array">
        <item>0%</item>
        <item>20%</item>
        <item>40%</item>
        <item>60%</item>
        <item>80%</item>
        <item>100%</item>
    </string-array>
    <string-array name="textsize_array">
        <item>70%</item>
        <item>85%</item>
        <item>100%</item>
        <item>115%</item>
        <item>130%</item>
    </string-array>    
	<string name="strCopyright">AFortune - Copyright (C) 2011  Goffredo Baroncelli &lt;kreijack@gmail.com&gt;</string>
	<string name="strUnknownVersion">Unknown version</string>
	<string name="strSourceAddress">https://github.com/kreijack/AFortune.git</string>
	<string name="strGplAbout">This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2 of the License, or (at your option)
any later version.\n
This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
more details.\n
You should have received a copy of the GNU General Public License along with
this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
Street, Fifth Floor, Boston, MA 02110-1301, USA. 
</string>
	<string name="select_fortune_header">Select "fortunes"</string>
	<string name="list_config_prompt">Enable "fortunes" ...</string>
	<string name="transparent_prompt">Background opacity %</string>    
	<string name="textsize_prompt">Text size</string>    
	<string name="bgColor_prompt">Background color</string>    
	<string name="fgColor_prompt">Text color</string>    
	<string name="btnCaptionNextFortune">Next...</string>    
	<string name="btnCaptionShare">Email...</string>    
	<string name="btnCopyAll">Copy</string>
	<string name="txtSendTo">Send fortune...</string>
	<string name="captionShareViaSMS">SMS..</string>
	<string name="btnCaptionMenu">...</string>                
</resources>
