<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/hello_message"
	    android:id="@+id/tvHello"
	    android:textSize="20px"/>
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/timeout_prompt"></TextView>
	<Spinner 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:prompt="@string/timeout_prompt"
		android:id="@+id/spTimeout" 
		android:entries="@array/timeout_array">
	</Spinner>
	<Button 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:id="@+id/btnUpdate" 
		android:text="@string/update_prompt"></Button>
	<Button android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/list_config_prompt" 
		android:id="@+id/btEnableFortunes">
	</Button>
	<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView3" android:text="@string/transparent_prompt"></TextView>
	<Spinner android:layout_height="wrap_content" 
		android:layout_width="match_parent" 
		android:id="@+id/spTransparent"
		android:prompt="@string/transparent_prompt"
		android:entries="@array/transparent_array">
	</Spinner>
	<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textView3" android:text="@string/textsize_prompt"></TextView>
	<Spinner android:layout_height="wrap_content" 
		android:layout_width="match_parent" 
		android:id="@+id/spTextSize"
		android:prompt="@string/textsize_prompt"
		android:entries="@array/textsize_array">
	</Spinner>	
	<TextView android:text=" " 
		android:id="@+id/textView1" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">
	</TextView>	
	<Button 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:id="@+id/btnAbout" 
		android:text="@string/about_prompt" 
		android:layout_gravity="bottom">
	</Button>
</LinearLayout>
