<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll" android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout android:orientation="horizontal"
    		android:layout_width="match_parent" android:layout_height="wrap_content" 
    		android:id="@+id/linearLayout1">
	    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/app_name" android:layout_height="wrap_content"></TextView>
    	<TextView android:text="TextView" android:id="@+id/txtVersionName" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:text="@string/strCopyright" android:layout_height="wrap_content"></TextView>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/strGplAbout" android:layout_height="wrap_content"></TextView>
    <Button android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:id="@+id/btnClose" 
    	android:text="@string/close_prompt"></Button>
</LinearLayout>
</ScrollView>
